hphp/test/slow/list_assignment/assignment-to-this.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/assignment-to-this.php on line 4
